L02/part1/batch/jobs/A0285757B/log.txt
Processing student job in jobs/A0285757B
jobs/A0285757B/utils.c:4:5: error: conflicting types for ‘sum’; have ‘int(int *, int)’
    4 | int sum(int sum_array[], int n) {
      |     ^~~
In file included from jobs/A0285757B/utils.c:2:
jobs/A0285757B/utils.h:2:8: note: previous declaration of ‘sum’ with type ‘double(int *, int)’
    2 | double sum(int [], int);
      |        ^~~
Compilation failed for jobs/A0285757B
Execution time for jobs/A0285757B: 0 seconds
Execution compiled with errors in jobs/A0285757B 

